<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chooseOption.ChooseOptionActivity">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uiTvResetPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/str_choose_the_option_below_to_reset_your_password"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:textSize="25sp"
        android:textAlignment="center"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uiBtnCallMobile"
        android:text="@string/str_via_mobile_sms"
        android:layout_margin="25dp"
        app:layout_constraintTop_toBottomOf="@id/uiTvResetPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="90dp"
        android:backgroundTint="#FF03DAC5"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/uiBtnCallEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="#FF03DAC5"
        android:text="@string/str_via_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uiBtnCallMobile" />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/uiIvEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_cancel_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>