<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menuOption.MenuOptionActivity">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uiTvOption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/str_choose_the_option"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:textSize="35sp"
        android:textAlignment="center"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uiBtnNotification"
        android:text="@string/str_enter_notification"
        android:layout_margin="25dp"
        app:layout_constraintTop_toBottomOf="@id/uiTvOption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/purple_700"
        android:textColor="@color/white"
        android:layout_marginTop="90dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/uiBtnDocument"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/purple_700"
        android:textColor="@color/white"
        android:text="@string/str_enter_document_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uiBtnNotification" />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/uiIvEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_cancel_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>